WIP: Criar lista de mentorias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">quick-mentoring-mobile</string>
     <string name="title_activity_home_mentor">HomeMentorActivity</string>
+    <string name="title_activity_home_mentorado">HomeMentoradoActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
