--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_visualizar_mentoria">VisualizarMentoria</string>
+    <string name= "title_activity_minhas_aplicacoes">MinhasAplicacoes</string>
 </resources>
