--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="navigation_drawer_open">Abrir Menu</string>
     <string name="navigation_drawer_close">Fechar Menu</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="perfil_mentor">Perfil Mentor</string>
+    <string name="perfil_mentorado">Perfil Mentorado</string>
+
     <string name="title_activity_visualizar_mentoria">Visualização de Mentoria</string>
     <string name="title_activity_minhas_aplicacoes">Minhas Aplicações</string>
 </resources>
